--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-hook/window-size": "^3.1.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.13.1"
   },
   "devDependencies": {
     "eslint": "^8",
